<resources>
    <string name="app_name">AStore</string>
    <string name="new_el">Добавить</string>
    <string name="cancel">отмена</string>
    <string name="commit">подтверждение</string>
    <string name="inputTitle">Укажите значение</string>
    <string name="inputFaculty">Наименование магазина</string>
    <string name="inputGroup">Название категории</string>
    <string name="product">Продукт</string>
    <string name="entryProduct">Введите название</string>
    <string name="count">Количество</string>
    <string name="entryCount">Введите количество</string>
    <string name="price">Цена</string>
    <string name="entryPrice">Введите цену</string>
    <string name="dayManufacture">Дата изготовления</string>
    <string name="dayExpiration">Срок годности</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inp_name">Наименование</string>
    <string name="entry">Укажите значение</string>
    <string name="errorDM">Укажите верную дату</string>
</resources>