<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout_count"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProductFragment">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_name" />

    <TextView
        android:id="@+id/textView_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_count" />

    <TextView
        android:id="@+id/textView_dayManufacture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:text="@string/dayManufacture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calendarID_dayManufacture" />

    <EditText
        android:id="@+id/editText_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/entryCount"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toEndOf="@+id/textView_count"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/entryProduct"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_name"
        app:layout_constraintTop_toTopOf="parent" />

    <DatePicker

        android:id="@+id/calendarID_dayManufacture"
        style="@android:style/Widget.DatePicker"
        android:layout_width="224dp"
        android:layout_height="112dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_price" />

    <DatePicker

        android:id="@+id/calendarID_dayExpiring"
        style="@android:style/Widget.DatePicker"
        android:layout_width="224dp"
        android:layout_height="112dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarID_dayManufacture" />

    <TextView
        android:id="@+id/textView_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_price" />

    <EditText
        android:id="@+id/editText_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/entryPrice"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toEndOf="@+id/textView_price"
        app:layout_constraintTop_toBottomOf="@+id/editText_count" />

    <TextView
        android:id="@+id/textView_dayExpiring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:text="@string/dayExpiration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calendarID_dayExpiring" />
</androidx.constraintlayout.widget.ConstraintLayout>